final paper revision

--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/appendix_A.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/appendix_A.tex
@@ -49,6 +49,21 @@
     \label{fig:contactPNP}
 \end{figure}
 
+\begin{figure}[!h]
+    \centering
+    \begin{subfigure}[c]{0.40\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/leaveDialog.jpg}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[c]{0.40\linewidth}
+        \centering
+        \includegraphics[scale=0.15]{figures/Chapter4/Main/reportDiscarded.jpg}
+    \end{subfigure}
+    \caption{Discard Report}
+    \label{fig:submitReport}
+\end{figure}
+
 
 \begin{figure}[!h]
     \centering
