--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/approval.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/approval.tex
@@ -1,7 +1,9 @@
 %   Filename    : approval.tex 
 \begin{center}
 \textbf{Approval Sheet}
-	
+
+\doublespacing
+ 
 The Division of Physical Sciences and Mathematics, College of Arts and Sciences, University of the Philippines Visayas 
 
 certifies that this is the approved version of the following special problem:
@@ -12,18 +14,18 @@ certifies that this is the approved version of the following special problem:
 {\small\textbf{Approved by:}}
 
 \newlength{\maxnamewidth}
-\setlength{\maxnamewidth}{\widthof{Prof. Francis D. Dimzon}}
+\setlength{\maxnamewidth}{\widthof{Christine Florence C. Cala-or}}
 
 \newcommand{\signaturerule}{\rule{10em}{.4pt}}
 	\begin{tabular}{lll}
 		\bfseries Name  & \bfseries Signature & \bfseries Date\\ \\
-		\underline{Prof. Francis D. Dimzon} &\signaturerule  & \signaturerule\\ 
-		(Adviser)\\ \\
-		% \signaturerule &\signaturerule &\signaturerule\\
-		% (Co-Adviser)\\ \\
-		% \signaturerule &\signaturerule &\signaturerule\\
-		% (Reader)\\ \\
-            \underline{\makebox[\maxnamewidth][l]{Dr. Arnel L. Tampos}}&\signaturerule &\signaturerule\\
+		\underline{\makebox[\maxnamewidth][l]{Francis D. Dimzon}} &\signaturerule  & \signaturerule\\ 
+		(Adviser)\\ \\ \\
+            \underline{\makebox[\maxnamewidth][l]{Ara Abigail E. Ambita}}&\signaturerule &\signaturerule\\
+		(Panel Member)\\ \\ \\
+            \underline{Christine Florence C. Cala-or}&\signaturerule &\signaturerule\\
+		(Reader)\\ \\ \\
+            \underline{\makebox[\maxnamewidth][l]{Arnel L. Tampos, Ph.D.}}&\signaturerule &\signaturerule\\
 		(Division Chair)
 
 	\end{tabular}
