--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_1.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/chapter_1.tex
@@ -45,6 +45,7 @@ This study specifically seeks to:
 
 \begin{enumerate}
    \item Develop an application that would allow users to easily report missing persons to the PNP and receive updates on such reports, as well as a PNP counterpart application that will enable the PNP to quickly receive, verify, manage, and respond to reports.
+   \item Implement a user-friendly and intuitive interface design for both the  user application and the PNP application.
    \item Integrate a serverless database system which securely stores and manages User and PNP accounts, login authorizations, and reports without the need for a server infrastructure or dependence on local data storage, allowing the application suite to be used in any operating-system compatible device.
    \item Implement geolocation services that enable report routing so that, depending on the location of the station and incident, reports are received and managed by the associated PNP station account.
    \item Implement location-based notifications so that users can receive alerts and view information about missing persons near their current location so they can assist in the search, thus promoting a community-based approach in resolving missing persons cases.
