--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/declaration.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/declaration.tex
@@ -7,6 +7,8 @@
 		\textbf{Declaration}
 		\end{center}
 
+\doublespacing
+
 We,  Guides, Emmanuel Tarek Shayne, Hismaña, Nikko Gabriel, and Torculas, Erru, hereby certify that this Special Problem, including the pdf file, has been written by us  and is the record of work carried out by us. Any significant borrowings have been properly acknowledged and referred.
 
 \newlength{\maxnamewidth}
@@ -19,11 +21,11 @@ We,  Guides, Emmanuel Tarek Shayne, Hismaña, Nikko Gabriel, and Torculas, Erru,
 \\
 \bfseries Name & \bfseries Signature & \bfseries Date \\ \\
 \underline{Guides, Emmanuel Tarek Shayne} & \underline{\hspace{4cm}} & 
-\underline{\makebox[\maxdatewidth][l]{June 7, 2023}} \\
+\underline{\makebox[\maxdatewidth][l]{June 19, 2023}} \\
 (Student) \\ \\
-\underline{\makebox[\maxnamewidth][l]{Hismaña, Nikko Gabriel}} &  \underline{\hspace{4cm}} & \underline{\makebox[\maxdatewidth][l]{June 7, 2023}} \\
+\underline{\makebox[\maxnamewidth][l]{Hismaña, Nikko Gabriel}} &  \underline{\hspace{4cm}} & \underline{\makebox[\maxdatewidth][l]{June 19, 2023}} \\
 (Student) \\ \\
-\underline{\makebox[\maxnamewidth][l]{Torculas, Erru}} & \underline{\hspace{4cm}} & \underline{\makebox[\maxdatewidth][l]{June 7, 2023}} \\
+\underline{\makebox[\maxnamewidth][l]{Torculas, Erru}} & \underline{\hspace{4cm}} & \underline{\makebox[\maxdatewidth][l]{June 19, 2023}} \\
 (Student) \\
 \end{tabular}
 
