--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/main.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/main.tex
@@ -8,6 +8,7 @@
 \setlength{\parindent}{0pt} %this is here.
 \usepackage{setspace}
 \setstretch{1.15}
+% \setstretch{2} % for double-spacing
 
 \usepackage[compact]{titlesec}
 \titlespacing*{\section}
