--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/preamble.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/preamble.tex
@@ -21,6 +21,7 @@
 \let\st@rtbibchapter\@bibnewpage
 \makeatother
 
+\usepackage[en-US]{datetime2}
 \usepackage{amsmath}       % American Math Society packages
 \usepackage{amsfonts}
 \usepackage{amssymb}
