--- a/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/title_page.tex
+++ b/Written Outputs/SP_FinalPaper/SP_FinalPaper_LaTeXFiles/title_page.tex
@@ -1,4 +1,6 @@
 %   Filename    : title_page.tex 
+
+%to modify date and time to Month and Year only
 \begin{titlepage}
 \centering
 
@@ -34,5 +36,8 @@ Adviser\\
 %Co-Adviser
 
 \vspace{1.75cm}
+
+\DTMlangsetup{showdayofmonth=false}
 \today
+
 \end{titlepage}
